// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component renders correctly 1`] = `
<button
  className="j-control"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label={undefined}
    className="j-icon j-icon--type-add j-control__icon"
  />
</button>
`;

exports[`Icon component renders with an additional ariaLabel if passed 1`] = `
<button
  className="j-control"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="mock-label"
    className="j-icon j-icon--type-add j-control__icon j-tooltiped"
  />
</button>
`;

exports[`Icon component renders with an additional className and ariaLabel if passed 1`] = `
<button
  className="j-control mock-class"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="mock-label"
    className="j-icon j-icon--type-add j-control__icon j-tooltiped"
  />
</button>
`;

exports[`Icon component renders with an additional className if passed 1`] = `
<button
  className="j-control mock-class"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label={undefined}
    className="j-icon j-icon--type-add j-control__icon"
  />
</button>
`;
